fixed the alignment issues

--- a/styles/login.css
+++ b/styles/login.css
@@ -6,6 +6,10 @@
 body {
     font-family: "Poppins", sans-serif;
     background-color: #f4f4f4;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
 }
 
 .panel__up {
@@ -43,6 +47,7 @@ body {
     gap: 30px;
     font-size: x-large;
     color: #365486;
+    width: 400px;
 }
 
 .login__content {
